# saenopy

./: .coveragerc  .gitignore  .hgignore  .readthedocs.yml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  SAENO.pro  launch.py  main.cpp  main.py  pyproject.toml  setup.py  stack_video.py
.github/workflows/: build-docs.yml  installer.yml  publish.yml  test.yml
Stack_Coll12/: contract.py
artificial_dipole/: artificial_strecher.py
cpp/: FiniteBodyForces.cpp  FiniteBodyForces.py  Vec3D.cpp  VirtualBeads.py  __init__.py  buildEpsilon.py  configHelper.cpp  configHelper.py  downhillSimplexHelper.cpp  imageHelper.cpp  loadHelpers.py  multigridHelper.py  sparseHelper.cpp  stack3DHelper.cpp  tensorHelper.py  tfjit.py
development/: raise_version_number.py  release_tools.py  send_to_pypi.py
docs/: api.rst  autobuild.bat  boundarycondition.ipynb  boundarycondition.py  command_line.rst  conf.py  connectivity.txt  constraint_displacement.txt  constraint_force.txt  convert_notebooks.bat  example_1_classic_single_cell_tfm.rst  example_2_dynamical_single_cell_tfm.rst  examples.rst  fit_material_parameters.ipynb  fit_material_parameters.py  index.rst  installation.rst  macrorheology.ipynb  macrorheology.py  macrorheology.rst  material.ipynb  material.rst  measured_displacement.txt  mesh.rst  nodes.txt  regularization.ipynb  regularization.py  relaxation.ipynb  relaxation.py  requirements.readthedocs.txt  simplepython.tpl
docs/_static/css/: custom.css
docs/examples/: 1_SingleCellTFM.py  2_DynamicalSingleCellTFM.py  DynamicalSingleCellTFM.py  SingleCellTFM.py
docs/source/: ReadInData.rst  api.rst  boundarycondition.ipynb  boundarycondition.py  conf.py  convert_notebooks.bat  example_1_classic_single_cell_tfm.py  example_1_classic_single_cell_tfm.rst  example_2_dynamical_single_cell_tfm.py  example_2_dynamical_single_cell_tfm.rst  index.rst  interface.rst  interface_solver.rst  macrorheology.py  material.ipynb  mesh.rst  regularization.ipynb  regularization.py  simplepython.tpl
docs/source/2.5d_orientation/: api.rst  index.rst  interface.rst  parameters.rst  parameters_orientation.rst  parameters_segmentation.rst  theory.rst
docs/source/2.5d_spheroid/: index.rst  interface.rst  parameters.rst  parameters_force.rst  parameters_piv.rst  theory.rst
docs/source/3d_tfm/: ReadInData.rst  (+11 more)
example_relax/: config.txt
macrorheology/matlab/: PlotFitandData.m
saeno/: FiniteBodyForces.py  VirtualBeads.cpp  VirtualBeads.py  __init__.py  buildBeams.cpp  buildBeams.py  conjugateGradient.py  load.py  loadHelpers.py  macro.py  main.py  materials.py  meshViewer.py  multigridHelper.py  numbaOverload.py  save.py
saenopy/: Chameleon.cpp  DRec.cpp  FiniteBodyForces.py  Mat3D.cpp  VirtualBeads.py  __init__.py  add_source.py  buildBeams.py  buildEpsilon.cpp  build_beams.py  configHelper.py  conjugateGradient.py  conjugate_gradient.py  convert_solver_to_result.py  examples.py  export_html.py  getDeformations.py  get_deformations.py  gui.py  gui_deformation.py  gui_deformation_spheriod.py  gui_deformation_whole2.py  gui_deformation_wizard.py  gui_master.py  gui_master.spec  gui_mpl.py  gui_orientation.py  gui_vtk.py  load.py  loadHelpers.py  macro.py  main.py  materials.py  mesh.py  meshViewer.py  multigridHelper.cpp  multigridHelper.py  multigrid_helper.py  numbaOverload.py  numba_overload.py  (+23 more)
saenopy/gui/: QExtendedGraphicsView.py  QtShortCuts.py  code_evluate_normal.py  example_creator.py  gui_classes.py  gui_master.py  lif_reader.py  patch_lifreader.py  pyinstaller_runtime.py  resources.py  sigmoid_widget.py  stack_preview.py  stack_selector.py  stack_selector_crop.py  stack_selector_leica.py  stack_selector_tif.py
saenopy/gui_solver/: BatchEvaluate.py  DeformationDetector.py  ExportRenderCommon.py  Exporter.py  ExporterRender2D.py  ExporterRender3D.py  FiberViewer.py  FittedMesh.py  MeshCreator.py  PipelineModule.py  QTimeSlider.py  Regularizer.py  ResultView.py  StackDisplay.py  VTK_Toolbar.py  showVectorField.py
saenopy/img/: Icon.icns
saenopy/pyTFM/: TFM_functions.py  TFM_tractions.py  calculate_deformation.py  calculate_forces.py  calculate_strain_energy.py  calculate_stress.py  correct_stage_drift.py  frame_shift_correction.py  graph_theory_for_cell_boundaries.py  grid_setup_solids_py.py  plotting.py  stress_functions.py  suppress_warnings.py  utilities_TFM.py
saenopy/test/: test_tfm2d_draw.py
saenopy/unused/: VirtualBeads.py  convert_solver_to_result.py  gui_deformation.py  gui_deformation_wizard.py  gui_mpl.py  gui_reorder.py  gui_vtk.py  load.py  macro.py  main.py  meshViewer.py  multigrid_helper_old.py  numba_overload.py  save.py
test/: interactive_material.py  interactive_material2.py  mock_dir.py  test_download_example.py  test_legacy_result_loading.py  test_load_stack.py  test_material.py  test_mesh.py  test_non_regularize.py  test_reference_state.py  test_use_gui.py
unused/: VirtualBeads.py  configHelper.py  convert_solver_to_result.py  gui_deformation.py  gui_deformation_wizard.py  gui_mpl.py  gui_vtk.py  load_helpers.py  main.py  multigrid_helper_old.py  requirements.txt  save.py  stack3DHelper.py  tfjit.py
(+141 files in other folders)
