[tool.poetry]
name = "saenopy"
version = "1.0.4"
description = "Semi-elastic fiber optimisation in python."
authors = ["rgerum <14153051+rgerum@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "saenopy"}]


[tool.poetry.dependencies]
python = "^3.8,<3.12"
numpy = "^1.23.4"
scipy = "^1.9.3"
tqdm = "^4.64.1"
qimage2ndarray = "^1.9.0"
natsort = "^8.2.0"
pyvista = "^0.37.0"
pyvistaqt = "^0.9.0"
imagecodecs = "^2022.9.26"
openpiv = "^0.24.2"
pyqt5 = "=5.15.9"
pyqt5-qt5 = "=5.15.2"
qtawesome = "^1.2.1"
jointforces = "^1.0.1"
numba = "^0.56.4"
appdirs = "^1.4.4"
nptyping = "^2.4.1"
qtrangeslider = "^0.1.5"
h5py = "^3.8.0"
pyfields = "^1.7.0"
sphinx = { version = ">=1.6,<7", optional = true }
sphinx-rtd-theme = { version = "^1.2.2", optional = true }
nbsphinx = { version = "^0.9.2", optional = true }
sphinx-gallery = {version = "^0.13.0", optional = true }
solidspy = "*"
black = { version="^24.4.0", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx", "sphinx-gallery"]


[tool.poetry.scripts]
saenopy = "saenopy.gui.gui_master:main"


[tool.poetry.group.docs.dependencies]
sphinx = ">=1.6,<7"
sphinx-rtd-theme = "^1.2.2"
nbsphinx = "^0.9.2"
sphinx-gallery = "^0.13.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.9.0"
auto-py-to-exe = "^2.33.0"
pytest = "^7.2.2"
coverage = "^5.0.0"
hypothesis = "^6.74.1"
coveralls = "^3.3.1"
findiff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
