[tool.poetry]
name = "saenopy"
version = "1.0.6"
description = "Semi-elastic fiber optimisation in python."
authors = ["rgerum <14153051+rgerum@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "saenopy"}]


[tool.poetry.dependencies]
python = "^3.9,<3.13"
numpy = ">=1.26.4"
scipy = ">=1.9.3"
tqdm = "^4.64.1"
qimage2ndarray = "^1.9.0"
natsort = "^8.2.0"
pyvista = "^0.44.1"
pyvistaqt = "^0.11.1"
imagecodecs = "^2024.9.22"
openpiv = "^0.24.2"
pyqt5 = "=5.15.11"
qtawesome = "^1.2.1"
jointforces = "^1.0.7"
numba = "^0.60.0"
appdirs = "^1.4.4"
qtrangeslider = "^0.1.5"
h5py = "^3.8.0"
sphinx = { version = ">=1.6,<7", optional = true }
sphinx-rtd-theme = { version = "^1.2.2", optional = true }
nbsphinx = { version = "^0.9.2", optional = true }
sphinx-gallery = {version = "^0.13.0", optional = true }
solidspy = "*"
black = { version="^24.4.0", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx", "sphinx-gallery"]


[tool.poetry.scripts]
saenopy = "saenopy.gui.gui_master:main"


[tool.poetry.group.docs.dependencies]
sphinx = ">=1.6,<7"
sphinx-rtd-theme = "^1.2.2"
nbsphinx = "^0.9.2"
sphinx-gallery = "^0.13.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.9.0"
auto-py-to-exe = "^2.33.0"
pytest = "^7.2.2"
coverage = ">=5.0.0"
hypothesis = "^6.74.1"
coveralls = "^3.3.1"
findiff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
