[project]
name = "saenopy"
version = "1.0.7"
description = "Semi-elastic fiber optimisation in python."
authors = [
    { name = "rgerum", email = "14153051+rgerum@users.noreply.github.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26.4",
    "scipy==1.14.1",
    "tqdm>=4.64.1,<5.0.0",
    "qimage2ndarray>=1.9.0,<2.0.0",
    "natsort>=8.2.0,<9.0.0",
    "pyvista>=0.44.1,<0.45.0",
    "pyvistaqt>=0.11.1,<0.12.0",
    "imagecodecs>=2024.9.22,<2025.0.0",
    "openpiv>=0.24.2,<0.25.0",
    "pyside6==6.8.2.1",
    "qtawesome>=1.2.1,<2.0.0",
    "jointforces>=1.0.7,<2.0.0",
    "compactionAnalyzer>=1.0.7,<2.0.0",
    "numba>=0.60.0,<0.61.0",
    "appdirs>=1.4.4,<2.0.0",
    "superqt>=0.6.7,<0.7.0",
    "h5py>=3.8.0,<4.0.0",
    "solidspy",
    "furo>=2024.8.6,<2025.0.0",
    "notebook>=7.4.1,<8.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=1.6,<7",
    "sphinx-rtd-theme>=1.2.2,<2.0.0",
    "nbsphinx>=0.9.2,<0.10.0",
    "sphinx-gallery>=0.13.0,<0.14.0",
]

[project.scripts]
saenopy = "saenopy.gui.gui_master:main"

[dependency-groups]
docs = [
    "sphinx>=1.6,<7",
    "sphinx-rtd-theme>=1.2.2,<2.0.0",
    "nbsphinx>=0.9.2,<0.10.0",
    "sphinx-gallery>=0.13.0,<0.14.0",
]
dev = [
    "pyinstaller>=6.11.1,<7.0.0",
    "auto-py-to-exe>=2.33.0,<3.0.0",
    "pytest>=7.2.2,<8.0.0",
    "coverage>=5.0.0",
    "hypothesis>=6.74.1,<7.0.0",
    "coveralls>=3.3.1,<4.0.0",
    "findiff>=0.9.2,<0.10.0",
    "black>=24.4.0,<25.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["saenopy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "docs",
    "unused",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = [
    "E402",
    "E711",
    "E712",
    "E721",
    "E722",
    "E741",
    "E401",
    "F401",
    "F541",
    "F811",
    "F821",
    "F841",
]
